avoid overly long lines (especially on mobile)

--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -9,6 +9,7 @@ body {
 
 a {
     color: #1787A9;
+    word-break: break-word;
     &:hover, &:focus {
 	    color: #1EAEDB;
 	}
